--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                 </button>
             </section>
         </div>
+        <div class = "Campeones" id="Scampeones">
+            <section class = "ImgCampenoes">
+                <img class="champimg" id="spritechamp" src="./ranked-emblem/emblem-challenger.png">
+                 <h1 class = TextoRec id="textchamp">
+                    Tu campeon <br>Aparecerá aqui!
+                 </h1>
+            </section>
+        </div>
     </body>
         <script src="rl.js" charset="utf-8"></script>
     </body>
