--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <section class = "ImgCampenoes">
                 <img class="champimg" id="spritechamp" src="./ranked-emblem/emblem-challenger.png">
                  <h1 class = TextoRec id="textchamp">
-                    Tu campeon <br>Aparecerá aqui!
+                    Your champ <br> Will appear here
                  </h1>
             </section>
         </div>
